Fixed vertical alignment on select and search boxes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -142,6 +142,12 @@ table {
   .form-control {
     width: 100%;
   }
+  select {
+    height: 44px;
+  }
+  input[type="search"] {
+    font-size: 19px;
+  }
 }
 
 .search-results h2 {
@@ -180,7 +186,7 @@ table {
     font-family: "nta", Arial, sans-serif;
     font-weight: 400;
     text-transform: none;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 1.76923;
     position: relative;
     padding: 6px;
@@ -192,7 +198,7 @@ table {
     width: calc(100% - 39px);
 
     @include media(tablet) {
-      font-size: 16px;
+      font-size: 19px;
       line-height: 1.4375;
     }
   }
